# RememBot

./: .gitignore  README.md  RememBot_specification.md  check_api_keys.py  install.sh  pyproject.toml  roadmap.md
.github/: copilot-instructions.md
config/: .env.template  remembot.service
docs/: README.md  background_parser_spec.md  knowledge_linker_spec.md  openrouter_integration.md  security.md
scripts/: add_source_platform_column.py
src/remembot/: __init__.py  background_parser.py  bot.py  classifier.py  config.py  content_processor.py  database.py  embeddings.py  health.py  main.py  query_handler.py  web_main.py
src/remembot/web/: __init__.py  app.py
src/remembot/web/templates/: enter_pin.html  item_detail.html  table.html
tests/: test_ai_integration.py  test_embeddings.py  test_remembot.py
web/: app.py
web/static/: style.css
web/templates/: auth.html  item_detail.html  table.html
