[project]
name = "remembot"
version = "0.1.0"
description = "RememBot - Remember Robot, a Telegram bot that backs up your brain"
readme = "README.md"
authors = [
    { name = "Raymond Lowe", email = "raymond@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "python-telegram-bot>=20.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "Pillow>=8.0.0", 
    "pytesseract>=0.3.8",
    "python-docx>=0.8.11",
    "pypdf>=4.0.0",
    "openpyxl>=3.0.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "aiosqlite>=0.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0"
]

[project.scripts]
remembot = "remembot.main:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
